Refactor CSS styles for improved organization

--- a/style.css
+++ b/style.css
@@ -375,8 +375,9 @@ body{
 
 }
 section{
-    display: flex;
+    display: grid;
     flex-wrap: wrap;
+    grid-template-columns: repeat(1fr,1fr);
 }
 .container1{
     width: 600px;
@@ -759,4 +760,5 @@ footer{
     margin-top: 10px;
 
 }
+
 
